@@ -184,7 +184,8 @@ bool SavePieceOptions::mergeWith(const QUndoCommand *command)
         for (int i = 0; i < nodes.size(); ++i)
         {
             if (nodes.at(i).IsExcluded() != candidateNodes.at(i).IsExcluded()
-                    || nodes.at(i).IsCheckUniqueness() != candidateNodes.at(i).IsCheckUniqueness())
+                    || nodes.at(i).IsCheckUniqueness() != candidateNodes.at(i).IsCheckUniqueness()
+                    || nodes.at(i).IsPassmark() != candidateNodes.at(i).IsPassmark())
             {
                 return false;
             }
